// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="PicassoBadge-root PicassoBadge-white PicassoBadge-large"
    >
      5
    </span>
  </div>
</div>
`;

exports[`Badge renders in red variant 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <span
      class="PicassoBadge-root PicassoBadge-red PicassoBadge-large"
    >
      5
    </span>
  </div>
</div>
`;
